--- a/lab 1/Front/fruits&vegetable.html
+++ b/lab 1/Front/fruits&vegetable.html
@@ -115,7 +115,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="mango.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/mango.png" class="img-fluid" alt="product">
         <p class="mt-2">Mango</p>
         <p class="mt-2">₱120.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -123,7 +123,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="watermelon.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/watermelon.png" class="img-fluid" alt="product">
          <p class="mt-2">WaterMelon</p>
         <p>₱70.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -131,7 +131,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="apple.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/apple.png" class="img-fluid" alt="product">
          <p class="mt-2">Apple</p>
         <p>₱60.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -139,7 +139,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="grapes.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/grapes.png" class="img-fluid" alt="product">
          <p class="mt-2">Grapes</p>
         <p>₱120.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -151,7 +151,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="avocado.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/avocado.png" class="img-fluid" alt="product">
         <p class="mt-2">Avocado</p>
         <p class="mt-2">₱100.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -159,7 +159,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="orange.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/orange.png" class="img-fluid" alt="product">
          <p class="mt-2">Orange</p>
         <p>₱120.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -167,7 +167,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="garlic.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/garlic.png" class="img-fluid" alt="product">
          <p class="mt-2">Garlic</p>
         <p>₱100.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -175,7 +175,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="okra.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/okra.png" class="img-fluid" alt="product">
          <p class="mt-2">Okra</p>
         <p>₱100.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -187,7 +187,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="onion.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/onion.png" class="img-fluid" alt="product">
          <p class="mt-2">Onion</p>
         <p class="mt-2">₱120.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -195,7 +195,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="carrots.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/carrots.png" class="img-fluid" alt="product">
          <p class="mt-2">Carrot</p>
         <p>₱100.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -203,7 +203,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="kangkong.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/kangkong.png" class="img-fluid" alt="product">
          <p class="mt-2">Kangkong</p>
         <p>₱60.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -211,7 +211,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="potatoes.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/potatoes.png" class="img-fluid" alt="product">
          <p class="mt-2">Potatoes</p>
         <p>₱1100.00</p>
         <button class="btn btn-cart">Add to Cart</button>
