--- a/lab 1/Front/Grocery&Frozen.html
+++ b/lab 1/Front/Grocery&Frozen.html
@@ -115,7 +115,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Angus Beef.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Angus Beef.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Angus Beef </p>
         <p class="mt-2">₱550.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -123,7 +123,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="ground beef.jpg " class="img-fluid" alt="product">
+        <img src="../Front/Product Image/ground beef.jpg " class="img-fluid" alt="product">
         <p class="mt-2">Ground Beef </p>
         <p>₱168.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -131,7 +131,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Burger.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Burger.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Burger </p>
         <p>₱900.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -139,7 +139,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Fish stick.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Fish stick.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Fish Stick </p>
         <p>₱583.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -151,7 +151,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Oven Roasters.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Oven Roasters.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Oven Roaster </p>
         <p class="mt-2">₱300.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -159,7 +159,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Cooked Shrimp.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Cooked Shrimp.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Cooked Shrimp </p>
         <p>₱350.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -167,7 +167,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="mix vegetable.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/mix vegetable.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Mix Vegetable </p>
         <p>₱100.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -175,7 +175,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Fruit salad.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Fruit salad.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Fruit Salad </p>
         <p>₱400.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -187,7 +187,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Broccoli.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Broccoli.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Broccoli </p>
         <p class="mt-2">₱200.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -195,7 +195,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Snickers Icecream.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Snickers Icecream.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Snickers Ice Cream </p>
         <p>₱120.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -203,7 +203,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="M&M.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/M&M.jpg" class="img-fluid" alt="product">
         <p class="mt-2">M&M </p>
         <p>₱140.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -211,7 +211,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Totino's.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Totino's.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Totino's </p>
         <p>₱430.00</p>
         <button class="btn btn-cart">Add to Cart</button>
