--- a/lab 1/Front/RawMeat.html
+++ b/lab 1/Front/RawMeat.html
@@ -115,7 +115,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Beef Steak.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Beef Steak.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Beef Steak Cut </p>
         <p class="mt-2">₱340.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -123,7 +123,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Beef Leg.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Beef Leg.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Beef Leg </p>
         <p>₱300.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -131,7 +131,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Pork Belly.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Pork Belly.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Pork Belly</p>
         <p>₱440.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -139,7 +139,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Beef Tomohawk.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Beef Tomohawk.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Beef Tomahawk </p>
         <p>₱3500.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -151,7 +151,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Beef Sausage.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Beef Sausage.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Beef Sausage </p>
         <p class="mt-2">₱652.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -159,7 +159,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Pork Ribs.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Pork Ribs.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Pork Ribs </p>
         <p>₱247.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -167,7 +167,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Pork Belly Spare Ribs.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Pork Belly Spare Ribs.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Pork Belly Spare Ribs </p>
         <p>₱250.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -175,7 +175,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Whole Chicken.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Whole Chicken.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Whole Chicken </p>
         <p>₱320.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -187,7 +187,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Chicken Feet.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Chicken Feet.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Chicken Feet </p>
         <p class="mt-2">₱120.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -195,7 +195,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Ground pork.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Ground pork.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Ground Pork </p>
         <p>₱450.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -203,7 +203,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Salmon.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Salmon.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Salmon </p>
         <p>₱450.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -211,7 +211,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Tuna.jpg" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Tuna.jpg" class="img-fluid" alt="product">
         <p class="mt-2">Tuna Belly </p>
         <p>₱336.00</p>
         <button class="btn btn-cart">Add to Cart</button>
