--- a/lab 1/Front/bread&bakery.html
+++ b/lab 1/Front/bread&bakery.html
@@ -116,7 +116,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Gardenia.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Gardenia.png" class="img-fluid" alt="product">
         <p class="mt-2">Gardenia </p>
         <p class="mt-2">₱120.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -124,7 +124,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Pandesal.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Pandesal.png" class="img-fluid" alt="product">
         <p class="mt-2">Pandesal </p>
         <p>₱70.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -132,7 +132,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Banana_Bread.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Banana_Bread.png" class="img-fluid" alt="product">
         <p class="mt-2">Banana Bread </p>
         <p>₱150.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -140,7 +140,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Cookies.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Cookies.png" class="img-fluid" alt="product">
         <p class="mt-2">Cookies </p>
         <p>₱70.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -152,7 +152,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Croissant.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Croissant.png" class="img-fluid" alt="product">
         <p class="mt-2">Croissant </p>
         <p class="mt-2">₱120.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -160,7 +160,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Brownies.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Brownies.png" class="img-fluid" alt="product">
         <p class="mt-2">Brownies </p>
         <p>₱100.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -168,7 +168,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Pita_Bread.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Pita_Bread.png" class="img-fluid" alt="product">
         <p class="mt-2">Pita Bread </p>
         <p>₱100.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -176,7 +176,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Chocolate_Cake.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Chocolate_Cake.png" class="img-fluid" alt="product">
         <p class="mt-2">Chocolate Cake </p>
         <p>₱450.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -188,7 +188,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Donut.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Donut.png" class="img-fluid" alt="product">
         <p class="mt-2">Donut </p>
         <p class="mt-2">₱150.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -196,7 +196,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Pretzel.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Pretzel.png" class="img-fluid" alt="product">
         <p class="mt-2">Pretzel </p>
         <p>₱120.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -204,7 +204,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="BreadStick.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/BreadStick.png" class="img-fluid" alt="product">
         <p class="mt-2">BreadStick </p>
         <p>₱60.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -212,7 +212,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Bagel.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Bagel.png" class="img-fluid" alt="product">
         <p class="mt-2">Bagel </p>
         <p>₱170.00</p>
         <button class="btn btn-cart">Add to Cart</button>
