--- a/lab 1/Front/drinks.html
+++ b/lab 1/Front/drinks.html
@@ -117,7 +117,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Coke.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Coke.png" class="img-fluid" alt="product">
         <p class="mt-2">Coke </p>
         <p class="mt-2">₱40.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -125,7 +125,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Sprite.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Sprite.png" class="img-fluid" alt="product">
         <p class="mt-2">Sprite </p>
         <p>₱40.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -133,7 +133,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Pepsi.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Pepsi.png" class="img-fluid" alt="product">
         <p class="mt-2">Pepsi </p>
         <p>₱40.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -141,7 +141,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="A_W_RootBeer.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/A_W_RootBeer.png" class="img-fluid" alt="product">
         <p class="mt-2">A&W RootBeer </p>
         <p>₱50.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -153,7 +153,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Nature_Spring.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Nature_Spring.png" class="img-fluid" alt="product">
         <p class="mt-2">Nature Spring </p>
         <p class="mt-2">₱25.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -161,7 +161,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Evian.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Evian.png" class="img-fluid" alt="product">
         <p class="mt-2">Evian </p>
         <p>₱17.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -169,7 +169,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Jack_Daniels.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Jack_Daniels.png" class="img-fluid" alt="product">
         <p class="mt-2">Jack Daniels </p>
         <p>₱1270.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -177,7 +177,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Novellino.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Novellino.png" class="img-fluid" alt="product">
         <p class="mt-2">Novellino </p>
         <p>₱400.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -189,7 +189,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Redbull.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Redbull.png" class="img-fluid" alt="product">
         <p class="mt-2">Redbull </p>
         <p class="mt-2">₱60.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -197,7 +197,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Minute_Maid.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Minute_Maid.png" class="img-fluid" alt="product">
         <p class="mt-2">Minute Maid </p>
         <p>₱40.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -205,7 +205,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="White_monster.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/White_monster.png" class="img-fluid" alt="product">
         <p class="mt-2">White monster </p>
         <p>₱90.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -213,7 +213,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Plus.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Plus.png" class="img-fluid" alt="product">
         <p class="mt-2">Plus </p>
         <p>₱15.00</p>
         <button class="btn btn-cart">Add to Cart</button>
