--- a/lab 1/Front/can_goods.html
+++ b/lab 1/Front/can_goods.html
@@ -117,7 +117,41 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Gardenia.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Gardenia.png" class="img-fluid" alt="product">
+        <p class="mt-2">Mega Sardines </p>
+        <p class="mt-2">₱28.00 </p>
+        <button class="btn btn-cart">Add to Cart</button>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="product-card">
+        <img src="Pandesal.png" class="img-fluid" alt="product">
+        <p class="mt-2">Condensada Milk </p>
+        <p>₱50.00</p>
+        <button class="btn btn-cart">Add to Cart</button>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="product-card">
+        <img src="Banana_Bread.png" class="img-fluid" alt="product">
+        <p class="mt-2">Evaporada Milk </p>
+        <p>₱150.00</p>
+        <button class="btn btn-cart">Add to Cart</button>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="product-card">
+        <img src="Cookies.png" class="img-fluid" alt="product">
+        <p class="mt-2">Corned Beef </p>
+        <p>₱32.00</p>
+        <button class="btn btn-cart">Add to Cart</button>
+      </div>
+    </div>
+  </div>
+   <div class="row">
+    <div class="col-md-3">
+      <div class="product-card">
+        <img src="../Front/Product Image/Gardenia.png" class="img-fluid" alt="product">
         <p class="mt-2">Mega Sardines </p>
         <p class="mt-2">₱28.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -149,6 +183,9 @@
     </div>
   </div>
 </div>
+
+
+
     
 
 <footer class="mt-5 py-4">
