--- a/lab 1/Front/index.html
+++ b/lab 1/Front/index.html
@@ -6,6 +6,13 @@
   <title>SuperMarket</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <style>
+  :root {
+  --color-cream: #f1ddbe;
+  --color-tan: #b5824a;
+  --color-green: #719a61;
+  --color-darkgreen: #2e3b14;
+  --color-maroon: #4b0c06;
+  }
   body {
   font-family: Arial, sans-serif;
   background-color: #F3E2C7;
@@ -17,7 +24,6 @@
   opacity: 0.95;
 
   }
-
   .navbar {
     background-color: #2F3D1C; /* forest green */
   }
@@ -89,6 +95,14 @@
     background-color: #B6804B;
     color: white;
   }
+  #userWelcome {
+    display: none;
+    background-color: var(--color-tan);
+    color: white;
+    padding: 10px;
+    text-align: center;
+    font-weight: bold;
+  }
 </style>
 </head>
 <body>
@@ -117,24 +131,123 @@
 </nav>
 
 <!-- Login Modal -->
-<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+  <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="loginModalLabel">Login</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form id="loginForm">
+            <div class="mb-3">
+              <label for="loginEmail" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="loginEmail" required>
+            </div>
+            <div class="mb-3">
+              <label for="loginPassword" class="form-label">Password</label>
+              <input type="password" class="form-control" id="loginPassword" required>
+            </div>
+            <button type="submit" class="btn btn-success w-100">Login</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Register Modal -->
+  <div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="registerModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="registerModalLabel">Register</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="mb-3">
+              <label for="registerName" class="form-label">Full Name</label>
+              <input type="text" class="form-control" id="registerName" required>
+            </div>
+            <div class="mb-3">
+              <label for="registerEmail" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="registerEmail" required>
+            </div>
+            <div class="mb-3">
+              <label for="registerPassword" class="form-label">Password</label>
+              <input type="password" class="form-control" id="registerPassword" required>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Create Account</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script>
+    document.getElementById('loginForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const email = document.getElementById('loginEmail').value;
+      const username = email.split('@')[0];
+      localStorage.setItem('smartUser', username);
+      document.getElementById('usernameDisplay').textContent = 'Hello, ' + username;
+      document.getElementById('userWelcome').textContent = 'Welcome back, ' + username + '!';
+      document.getElementById('userWelcome').style.display = 'block';
+      document.getElementById('authButtons').classList.add('d-none');
+      document.getElementById('userNav').classList.remove('d-none');
+      const modal = bootstrap.Modal.getInstance(document.getElementById('loginModal'));
+      modal.hide();
+    });
+
+    function logout() {
+      localStorage.removeItem('smartUser');
+      document.getElementById('userWelcome').style.display = 'none';
+      document.getElementById('authButtons').classList.remove('d-none');
+      document.getElementById('userNav').classList.add('d-none');
+    }
+
+    window.addEventListener('DOMContentLoaded', () => {
+      const user = localStorage.getItem('smartUser');
+      if (user) {
+        document.getElementById('usernameDisplay').textContent = 'Hello, ' + user;
+        document.getElementById('userWelcome').textContent = 'Welcome back, ' + user + '!';
+        document.getElementById('userWelcome').style.display = 'block';
+        document.getElementById('authButtons').classList.add('d-none');
+        document.getElementById('userNav').classList.remove('d-none');
+      }
+    });
+  </script>
+  <!-- Your original HTML remains unchanged above -->
+
+<!-- Checkout Modal -->
+<div class="modal fade" id="checkoutModal" tabindex="-1" aria-labelledby="checkoutModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="loginModalLabel">Login</h5>
+        <h5 class="modal-title" id="checkoutModalLabel">Checkout</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form action="login.php" method="POST">
+        <form id="checkoutForm">
           <div class="mb-3">
-            <label for="loginEmail" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="loginEmail" required>
+            <label for="checkoutName" class="form-label">Full Name</label>
+            <input type="text" class="form-control" id="checkoutName" required>
           </div>
           <div class="mb-3">
-            <label for="loginPassword" class="form-label">Password</label>
-            <input type="password" class="form-control" id="loginPassword" required>
+            <label for="checkoutAddress" class="form-label">Shipping Address</label>
+            <textarea class="form-control" id="checkoutAddress" rows="3" required></textarea>
           </div>
-          <button type="submit" class="btn btn-success">Login</button>
+          <div class="mb-3">
+            <label for="checkoutProduct" class="form-label">Product</label>
+            <input type="text" class="form-control" id="checkoutProduct" readonly>
+          </div>
+          <div class="mb-3">
+            <label for="checkoutTotal" class="form-label">Total</label>
+            <input type="text" class="form-control" id="checkoutTotal" readonly>
+          </div>
+          <button type="submit" class="btn btn-success w-100">Place Order</button>
         </form>
       </div>
     </div>
@@ -142,34 +255,6 @@
 </div>
 
 
-<!-- Register Modal -->
-<div class="modal fade" id="registerModal" tabindex="-1" aria-labelledby="registerModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="registerModalLabel">Register</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form action="register.php" method="POST">
-          <div class="mb-3">
-            <label for="registerName" class="form-label">Full Name</label>
-            <input type="text" class="form-control" id="registerName" required>
-          </div>
-          <div class="mb-3">
-            <label for="registerEmail" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="registerEmail" required>
-          </div>
-          <div class="mb-3">
-            <label for="registerPassword" class="form-label">Password</label>
-            <input type="password" class="form-control" id="registerPassword" required>
-          </div>
-          <button type="submit" class="btn btn-primary">Register</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
 
 <!-- Hero Banner -->
 <div class="container mt-4">
@@ -310,7 +395,50 @@
     </div>
   </div>
 </footer>
+<script>
+  const addToCartButtons = document.querySelectorAll('.btn-cart');
+  addToCartButtons.forEach(button => {
+    button.addEventListener('click', function() {
+      const productCard = this.closest('.product-card');
+      const name = productCard.querySelector('p:nth-child(2)').textContent;
+      const price = productCard.querySelector('p:nth-child(3)').textContent;
 
+      document.getElementById('checkoutProduct').value = name;
+      document.getElementById('checkoutTotal').value = price;
+
+      const checkoutModal = new bootstrap.Modal(document.getElementById('checkoutModal'));
+      checkoutModal.show();
+    });
+  });
+
+document.addEventListener('DOMContentLoaded', () => {
+    const user = localStorage.getItem('smartUser');
+    const loginBtn = document.querySelector('[data-bs-target="#loginModal"]');
+    const registerBtn = document.querySelector('[data-bs-target="#registerModal"]');
+
+    if (user) {
+      const welcomeBar = document.createElement('div');
+      welcomeBar.id = 'userWelcome';
+      welcomeBar.textContent = 'Welcome back, ' + user + '!';
+      welcomeBar.style.display = 'block';
+      document.body.insertBefore(welcomeBar, document.body.firstChild);
+
+      if (loginBtn) loginBtn.style.display = 'none';
+      if (registerBtn) registerBtn.style.display = 'none';
+    }
+
+    const loginForm = document.getElementById('loginForm');
+    if (loginForm) {
+      loginForm.addEventListener('submit', function(e) {
+        e.preventDefault();
+        const email = document.getElementById('loginEmail').value;
+        const username = email.split('@')[0];
+        localStorage.setItem('smartUser', username);
+        location.reload();
+      });
+    }
+  });
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
