--- a/lab 1/Front/index.html
+++ b/lab 1/Front/index.html
@@ -270,7 +270,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="soap.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/soap.png" class="img-fluid" alt="product">
         <p class="mt-2">Dove soap</p>
         <p class="mt-2">₱120.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -278,7 +278,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="banana.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/banana.png" class="img-fluid" alt="product">
         <p class="mt-2">Banana</p>
         <p>₱120.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -286,7 +286,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="softdrinks.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/softdrinks.png" class="img-fluid" alt="product">
         <p class="mt-2">Softdrinks</p>
         <p>₱60.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -294,7 +294,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="jasmine.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/jasmine.png" class="img-fluid" alt="product">
         <p class="mt-2">Rice </p>
         <p>₱1100.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -309,7 +309,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Meat.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Meat.png" class="img-fluid" alt="product">
         <p class="mt-2">Meat</p>
         <p>₱450.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -317,7 +317,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Ketchup.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Ketchup.png" class="img-fluid" alt="product">
         <p class="mt-2">Ketchup</p>
         <p>₱80.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -325,7 +325,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="Downy.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Downy.png" class="img-fluid" alt="product">
         <p class="mt-2">Downy</p>
         <p>₱180.00</p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -333,7 +333,7 @@
     </div>
     <div class="col-md-3">
       <div class="product-card">
-        <img src="siken.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/siken.png" class="img-fluid" alt="product">
         <p class="mt-2">Chicken</p>
         <p>₱150.00</p>
         <button class="btn btn-cart">Add to Cart</button>
