--- a/lab 1/Front/dashboard.html
+++ b/lab 1/Front/dashboard.html
@@ -6,10 +6,6 @@
   <title>Admin Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    
-    .body{
-        background-color: beige;
-    }
     :root {
       --beige: #eedec6;
       --brown: #b8864b;
@@ -99,9 +95,40 @@
               <div class="card-body">
                 <h5 class="card-title">Inventory</h5>
                 <p class="card-text">Manage and view product inventory.</p>
-                <a href="inventory.html" class="btn btn-primary">Go to Inventory</a>
+                <a href="#" class="btn btn-primary">Go to Inventory</a>
               </div>
             </div>
           </div>
           <div class="col-lg-4 mb-4">
-            <div class
+            <div class="card shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title">Sales Report</h5>
+                <p class="card-text">Check daily, monthly and yearly sales reports.</p>
+                <a href="#" class="btn btn-primary">View Reports</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="card shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title">Profile</h5>
+                <p class="card-text">Edit admin profile and settings.</p>
+                <a href="#" class="btn btn-primary">Edit Profile</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // Toggle sidebar
+    document.getElementById("menu-toggle").addEventListener("click", function() {
+      document.getElementById("wrapper").classList.toggle("toggled");
+    });
+  </script>
+</body>
+</html>
