--- a/lab 1/Front/inventory.html
+++ b/lab 1/Front/inventory.html
@@ -78,65 +78,150 @@
       <div class="list-group list-group-flush">
         <a href="dashboard.html" class="list-group-item list-group-item-action">Dashboard</a>
         <a href="inventory.html" class="list-group-item list-group-item-action">Inventory</a>
-        <a href="#" class="list-group-item list-group-item-action">Sales Report</a>
-        <a href="#" class="list-group-item list-group-item-action">Profile</a>
+        <a href="Sales report.html" class="list-group-item list-group-item-action">Sales Report</a>
+        <a href="Profile.html" class="list-group-item list-group-item-action">Profile</a>
       </div>
     </div>
 
     <div class="container mt-4">
     <div class="d-flex justify-content-between mb-3">
-      <h3>Inventory List</h3>
-      <button class="btn btn-primary">Add New Item</button>
+      <h5>Product Inventory</h5>
+      <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">Add Item</button>
     </div>
+
     <table class="table table-hover shadow-sm">
       <thead>
         <tr>
-          <th scope="col">#</th>
-          <th scope="col">Product Name</th>
-          <th scope="col">Category</th>
-          <th scope="col">Quantity</th>
-          <th scope="col">Price</th>
-          <th scope="col">Actions</th>
+          <th>#</th>
+          <th>Product Name</th>
+          <th>Category</th>
+          <th>Quantity</th>
+          <th>Price</th>
+          <th>Actions</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody id="inventoryTable">
         <tr>
-          <th scope="row">1</th>
+          <td>1</td>
           <td>Green T-shirt</td>
           <td>Clothing</td>
           <td>50</td>
           <td>$15.00</td>
           <td>
-            <button class="btn btn-primary btn-sm">Edit</button>
-            <button class="btn btn-danger btn-sm">Delete</button>
-          </td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Leather Wallet</td>
-          <td>Accessories</td>
-          <td>30</td>
-          <td>$25.00</td>
-          <td>
-            <button class="btn btn-primary btn-sm">Edit</button>
-            <button class="btn btn-danger btn-sm">Delete</button>
-          </td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>Canvas Backpack</td>
-          <td>Bags</td>
-          <td>20</td>
-          <td>$45.00</td>
-          <td>
-            <button class="btn btn-primary btn-sm">Edit</button>
-            <button class="btn btn-danger btn-sm">Delete</button>
+            <button class="btn btn-primary btn-sm" onclick="editItem(this)">Edit</button>
+            <button class="btn btn-danger btn-sm" onclick="deleteItem(this)">Delete</button>
           </td>
         </tr>
       </tbody>
     </table>
   </div>
 
-    
-</body>
+  <!-- Add Modal -->
+  <div class="modal fade" id="addModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form onsubmit="addNewItem(event)">
+          <div class="modal-header">
+            <h5 class="modal-title">Add New Item</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+          </div>
+          <div class="modal-body">
+            <input required type="text" id="addName" class="form-control mb-2" placeholder="Product Name">
+            <input required type="text" id="addCategory" class="form-control mb-2" placeholder="Category">
+            <input required type="number" id="addQuantity" class="form-control mb-2" placeholder="Quantity">
+            <input required type="text" id="addPrice" class="form-control" placeholder="Price (e.g., $10.00)">
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-primary" type="submit">Add Item</button>
+            <button class="btn btn-secondary" type="button" data-bs-dismiss="modal">Cancel</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- Edit Modal -->
+  <div class="modal fade" id="editModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form onsubmit="saveEditItem(event)">
+          <div class="modal-header">
+            <h5 class="modal-title">Edit Item</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+          </div>
+          <div class="modal-body">
+            <input required type="text" id="editName" class="form-control mb-2">
+            <input required type="text" id="editCategory" class="form-control mb-2">
+            <input required type="number" id="editQuantity" class="form-control mb-2">
+            <input required type="text" id="editPrice" class="form-control">
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-primary" type="submit">Save Changes</button>
+            <button class="btn btn-secondary" type="button" data-bs-dismiss="modal">Cancel</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    let editRow = null;
+
+    function addNewItem(event) {
+      event.preventDefault();
+      const name = document.getElementById('addName').value;
+      const category = document.getElementById('addCategory').value;
+      const quantity = document.getElementById('addQuantity').value;
+      const price = document.getElementById('addPrice').value;
+
+      const table = document.getElementById('inventoryTable');
+      const newRow = table.insertRow();
+      newRow.innerHTML = `
+        <td></td>
+        <td>${name}</td>
+        <td>${category}</td>
+        <td>${quantity}</td>
+        <td>${price}</td>
+        <td>
+          <button class="btn btn-primary btn-sm" onclick="editItem(this)">Edit</button>
+          <button class="btn btn-danger btn-sm" onclick="deleteItem(this)">Delete</button>
+        </td>
+      `;
+      updateRowNumbers();
+      document.getElementById('addModal').querySelector('form').reset();
+      bootstrap.Modal.getInstance(document.getElementById('addModal')).hide();
+    }
+
+    function editItem(btn) {
+      editRow = btn.parentElement.parentElement;
+      document.getElementById('editName').value = editRow.cells[1].innerText;
+      document.getElementById('editCategory').value = editRow.cells[2].innerText;
+      document.getElementById('editQuantity').value = editRow.cells[3].innerText;
+      document.getElementById('editPrice').value = editRow.cells[4].innerText;
+      new bootstrap.Modal(document.getElementById('editModal')).show();
+    }
+
+    function saveEditItem(event) {
+      event.preventDefault();
+      editRow.cells[1].innerText = document.getElementById('editName').value;
+      editRow.cells[2].innerText = document.getElementById('editCategory').value;
+      editRow.cells[3].innerText = document.getElementById('editQuantity').value;
+      editRow.cells[4].innerText = document.getElementById('editPrice').value;
+      bootstrap.Modal.getInstance(document.getElementById('editModal')).hide();
+    }
+
+    function deleteItem(btn) {
+      btn.parentElement.parentElement.remove();
+      updateRowNumbers();
+    }
+
+    function updateRowNumbers() {
+      const rows = document.querySelectorAll("#inventoryTable tr");
+      rows.forEach((row, index) => {
+        row.cells[0].innerText = index + 1;
+      });
+    }
+  </script>
+  </body>
 </html>
