--- a/lab 1/Front/index.html
+++ b/lab 1/Front/index.html
@@ -395,6 +395,41 @@
     </div>
   </div>
 </footer>
+<!-- Your original HTML remains unchanged above -->
+
+<!-- Checkout Modal -->
+<div class="modal fade" id="checkoutModal" tabindex="-1" aria-labelledby="checkoutModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="checkoutModalLabel">Checkout</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="checkoutForm">
+          <div class="mb-3">
+            <label for="checkoutName" class="form-label">Full Name</label>
+            <input type="text" class="form-control" id="checkoutName" required>
+          </div>
+          <div class="mb-3">
+            <label for="checkoutAddress" class="form-label">Shipping Address</label>
+            <textarea class="form-control" id="checkoutAddress" rows="3" required></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="checkoutProduct" class="form-label">Product</label>
+            <input type="text" class="form-control" id="checkoutProduct" readonly>
+          </div>
+          <div class="mb-3">
+            <label for="checkoutTotal" class="form-label">Total</label>
+            <input type="text" class="form-control" id="checkoutTotal" readonly>
+          </div>
+          <button type="submit" class="btn btn-success w-100">Place Order</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script>
   const addToCartButtons = document.querySelectorAll('.btn-cart');
   addToCartButtons.forEach(button => {
@@ -411,17 +446,40 @@
     });
   });
 
-document.addEventListener('DOMContentLoaded', () => {
+  document.getElementById('checkoutForm').addEventListener('submit', function(e) {
+    e.preventDefault();
+    alert('Order placed successfully!');
+    const checkoutModal = bootstrap.Modal.getInstance(document.getElementById('checkoutModal'));
+    checkoutModal.hide();
+    this.reset();
+  });
+
+  // LOGIN FIXED CODE WITH LOGOUT
+  document.addEventListener('DOMContentLoaded', () => {
     const user = localStorage.getItem('smartUser');
     const loginBtn = document.querySelector('[data-bs-target="#loginModal"]');
     const registerBtn = document.querySelector('[data-bs-target="#registerModal"]');
+    const navbarRight = document.querySelector('.navbar .navbar-collapse');
 
-    if (user) {
-      const welcomeBar = document.createElement('div');
-      welcomeBar.id = 'userWelcome';
-      welcomeBar.textContent = 'Welcome back, ' + user + '!';
-      welcomeBar.style.display = 'block';
-      document.body.insertBefore(welcomeBar, document.body.firstChild);
+    if (user && navbarRight) {
+      const userDisplay = document.createElement('span');
+      userDisplay.textContent = `Welcome, ${user}`;
+      userDisplay.className = 'navbar-text text-white me-3';
+
+      const logoutBtn = document.createElement('button');
+      logoutBtn.className = 'btn btn-outline-warning';
+      logoutBtn.textContent = 'Logout';
+      logoutBtn.onclick = () => {
+        localStorage.removeItem('smartUser');
+        location.reload();
+      };
+
+      const container = document.createElement('div');
+      container.className = 'd-flex align-items-center';
+      container.appendChild(userDisplay);
+      container.appendChild(logoutBtn);
+
+      navbarRight.appendChild(container);
 
       if (loginBtn) loginBtn.style.display = 'none';
       if (registerBtn) registerBtn.style.display = 'none';
@@ -439,6 +497,8 @@ document.addEventListener('DOMContentLoaded', () => {
     }
   });
 </script>
+
+<!-- Add this right before </body> -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
