--- a/lab 1/Front/can_goods.html
+++ b/lab 1/Front/can_goods.html
@@ -117,7 +117,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="../Front/Product Image/Gardenia.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/Mega Sardines.jfif" class="img-fluid" alt="product">
         <p class="mt-2">Mega Sardines </p>
         <p class="mt-2">₱28.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
@@ -151,7 +151,7 @@
    <div class="row">
     <div class="col-md-3">
       <div class="product-card">
-        <img src="../Front/Product Image/Gardenia.png" class="img-fluid" alt="product">
+        <img src="../Front/Product Image/" class="img-fluid" alt="product">
         <p class="mt-2">Mega Sardines </p>
         <p class="mt-2">₱28.00 </p>
         <button class="btn btn-cart">Add to Cart</button>
