--- a/lab 1/Front/admin/Profile.html
+++ b/lab 1/Front/admin/Profile.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin Dashboard</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    
-    .body{
-        background-color: beige;
-    }
     :root {
       --beige: #eedec6;
       --brown: #b8864b;
@@ -78,7 +74,7 @@
       <div class="list-group list-group-flush">
         <a href="dashboard.html" class="list-group-item list-group-item-action">Dashboard</a>
         <a href="inventory.html" class="list-group-item list-group-item-action">Inventory</a>
-        <a href="Sales report.html" class="list-group-item list-group-item-action">Sales Report</a>
+        <a href="sales report.html" class="list-group-item list-group-item-action">Sales Report</a>
         <a href="Profile.html" class="list-group-item list-group-item-action">Profile</a>
       </div>
     </div>
