--- a/lab 1/Front/Profile.html
+++ b/lab 1/Front/Profile.html
@@ -47,6 +47,14 @@
       color: white;
     }
 
+    .card {
+      border: none;
+    }
+
+    .card-title {
+      color: var(--olive);
+    }
+
     .btn-primary {
       background-color: var(--sage);
       border-color: var(--sage);
@@ -57,11 +65,15 @@
       border-color: var(--maroon);
     }
 
-    .card {
-      border: none;
+    .profile-pic {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid var(--sage);
     }
 
-    .card-title {
+    label {
       color: var(--olive);
     }
   </style>
@@ -78,6 +90,42 @@
         <a href="Profile.html" class="list-group-item list-group-item-action">Profile</a>
       </div>
     </div>
+
+    <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
+        <div class="card shadow-sm p-4">
+          <div class="text-center mb-4">
+            <img src="https://via.placeholder.com/120" alt="Admin Photo" class="profile-pic mb-3">
+            <h5 class="card-title">7am Without Swing</h5>
+            <p class="text-muted">IT Admin</p>
+          </div>
+          <form>
+            <div class="mb-3">
+              <label for="name" class="form-label">Full Name</label>
+              <input type="text" class="form-control" id="name" value="Jhonnfall P. Sanchez">
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email Address</label>
+              <input type="email" class="form-control" id="email" value="jhonnfall@example.com">
+            </div>
+            <div class="mb-3">
+              <label for="phone" class="form-label">Phone Number</label>
+              <input type="text" class="form-control" id="phone" value="+63 900 123 4567">
+            </div>
+            <div class="mb-3">
+              <label for="role" class="form-label">Role</label>
+              <input type="text" class="form-control" id="role" value="Administrator" disabled>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Save Changes</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     
 </body>
 </html>
