--- a/lab 1/Front/sales report.html
+++ b/lab 1/Front/sales report.html
@@ -51,6 +51,10 @@
       color: white;
     }
 
+     .card-title {
+      color: var(--olive);
+    }
+
     .btn-primary {
       background-color: var(--sage);
       border-color: var(--sage);
@@ -61,12 +65,9 @@
       border-color: var(--maroon);
     }
 
-    .card {
-      border: none;
-    }
-
-    .card-title {
-      color: var(--olive);
+    .table thead {
+      background-color: var(--olive);
+      color: white;
     }
   </style>
 </head>
@@ -82,6 +83,104 @@
         <a href="Profile.html" class="list-group-item list-group-item-action">Profile</a>
       </div>
     </div>
+
+    <div class="container">
+    <!-- Summary Cards -->
+    <div class="row mb-4">
+      <div class="col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Total Sales</h5>
+            <p class="fs-4">$28,450</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Monthly Sales</h5>
+            <p class="fs-4">$5,230</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Top Product</h5>
+            <p class="fs-5">Green T-shirt</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Table -->
+    <div class="card shadow-sm mb-4">
+      <div class="card-body">
+        <h5 class="card-title mb-3">Detailed Sales Report</h5>
+        <div class="table-responsive">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Date</th>
+                <th>Product</th>
+                <th>Category</th>
+                <th>Units Sold</th>
+                <th>Total</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>2025-07-01</td>
+                <td>Green T-shirt</td>
+                <td>Clothing</td>
+                <td>20</td>
+                <td>$300.00</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>2025-07-02</td>
+                <td>Eco Bag</td>
+                <td>Accessories</td>
+                <td>10</td>
+                <td>$150.00</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>2025-07-03</td>
+                <td>Notebook Set</td>
+                <td>Stationery</td>
+                <td>15</td>
+                <td>$225.00</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>2025-07-04</td>
+                <td>Green T-shirt</td>
+                <td>Clothing</td>
+                <td>25</td>
+                <td>$375.00</td>
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>2025-07-05</td>
+                <td>Stainless Bottle</td>
+                <td>Accessories</td>
+                <td>8</td>
+                <td>$160.00</td>
+              </tr>
+              <!-- Add more rows as needed -->
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     
 </body>
 </html>
