--- a/lab 1/Front/dashboard.html
+++ b/lab 1/Front/dashboard.html
@@ -6,6 +6,9 @@
   <title>Admin Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
+     body {
+      background-color: beige;
+    }
     :root {
       --beige: #eedec6;
       --brown: #b8864b;
