--- a/lab 1/Front/Profile.html
+++ b/lab 1/Front/Profile.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Dashboard</title>
+  <title>Admin Profile</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     :root {
@@ -14,14 +14,14 @@
       --maroon: #4a0e08;
     }
 
-    #wrapper.toggled #sidebar-wrapper {
-      margin-left: -250px;
+    body {
+      background-color: var(--beige);
     }
 
     #sidebar-wrapper {
       width: 250px;
       min-height: 100vh;
-      background-color: var(--olive) !important;
+      background-color: var(--olive);
     }
 
     .sidebar-heading {
@@ -29,18 +29,18 @@
     }
 
     .list-group-item {
-      background-color: var(--olive) !important;
+      background-color: var(--olive);
       color: var(--beige);
       border: none;
     }
 
     .list-group-item:hover {
-      background-color: var(--brown) !important;
+      background-color: var(--brown);
       color: white;
     }
 
     .navbar {
-      background-color: var(--brown) !important;
+      background-color: var(--brown);
     }
 
     .navbar h4 {
@@ -49,6 +49,7 @@
 
     .card {
       border: none;
+      border-radius: 1rem;
     }
 
     .card-title {
@@ -75,6 +76,11 @@
 
     label {
       color: var(--olive);
+      font-weight: 500;
+    }
+
+    input:disabled {
+      background-color: #f3f3f3;
     }
   </style>
 </head>
@@ -91,34 +97,36 @@
       </div>
     </div>
 
-    <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-8">
-        <div class="card shadow-sm p-4">
-          <div class="text-center mb-4">
-            <img src="https://via.placeholder.com/120" alt="Admin Photo" class="profile-pic mb-3">
-            <h5 class="card-title">7am Without Swing</h5>
-            <p class="text-muted">IT Admin</p>
+    <!-- Page Content -->
+    <div class="container py-5">
+      <div class="row justify-content-center">
+        <div class="col-lg-8">
+          <div class="card shadow p-4">
+            <div class="text-center mb-4">
+              <img src="https://via.placeholder.com/120" alt="Admin Photo" class="profile-pic mb-3">
+              <h5 class="card-title mb-0">7am Without Swing</h5>
+              <p class="text-muted">IT Admin</p>
+            </div>
+            <form>
+              <div class="mb-3">
+                <label for="name" class="form-label">Full Name</label>
+                <input type="text" class="form-control" id="name" value="Jhonnfall P. Sanchez">
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email Address</label>
+                <input type="email" class="form-control" id="email" value="jhonnfall@example.com">
+              </div>
+              <div class="mb-3">
+                <label for="phone" class="form-label">Phone Number</label>
+                <input type="text" class="form-control" id="phone" value="+63 900 123 4567">
+              </div>
+              <div class="mb-4">
+                <label for="role" class="form-label">Role</label>
+                <input type="text" class="form-control" id="role" value="Administrator" disabled>
+              </div>
+              <button type="submit" class="btn btn-primary w-100">Save Changes</button>
+            </form>
           </div>
-          <form>
-            <div class="mb-3">
-              <label for="name" class="form-label">Full Name</label>
-              <input type="text" class="form-control" id="name" value="Jhonnfall P. Sanchez">
-            </div>
-            <div class="mb-3">
-              <label for="email" class="form-label">Email Address</label>
-              <input type="email" class="form-control" id="email" value="jhonnfall@example.com">
-            </div>
-            <div class="mb-3">
-              <label for="phone" class="form-label">Phone Number</label>
-              <input type="text" class="form-control" id="phone" value="+63 900 123 4567">
-            </div>
-            <div class="mb-3">
-              <label for="role" class="form-label">Role</label>
-              <input type="text" class="form-control" id="role" value="Administrator" disabled>
-            </div>
-            <button type="submit" class="btn btn-primary w-100">Save Changes</button>
-          </form>
         </div>
       </div>
     </div>
@@ -126,6 +134,5 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    
 </body>
 </html>
