--- a/lab 1/Front/sales report.html
+++ b/lab 1/Front/sales report.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=x, initial-scale=1.0">
-    <title>Inventory</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sales Report</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    
-    .body{
-        background-color: beige;
-    }
     :root {
       --beige: #eedec6;
       --brown: #b8864b;
@@ -18,8 +14,8 @@
       --maroon: #4a0e08;
     }
 
-    #wrapper.toggled #sidebar-wrapper {
-      margin-left: -250px;
+    body {
+      background-color: var(--beige);
     }
 
     #sidebar-wrapper {
@@ -51,7 +47,7 @@
       color: white;
     }
 
-     .card-title {
+    .card-title {
       color: var(--olive);
     }
 
@@ -69,6 +65,24 @@
       background-color: var(--olive);
       color: white;
     }
+
+    .modal-header {
+      background-color: var(--brown);
+      color: white;
+    }
+
+    .form-label {
+      font-weight: 500;
+      color: var(--olive);
+    }
+
+    .container-fluid > .row > .col-md-4 .card {
+      transition: transform 0.2s ease;
+    }
+
+    .container-fluid > .row > .col-md-4 .card:hover {
+      transform: scale(1.02);
+    }
   </style>
 </head>
 <body>
@@ -84,103 +98,121 @@
       </div>
     </div>
 
-    <div class="container">
-    <!-- Summary Cards -->
-    <div class="row mb-4">
-      <div class="col-md-4">
-        <div class="card shadow-sm">
-          <div class="card-body">
-            <h5 class="card-title">Total Sales</h5>
-            <p class="fs-4">$28,450</p>
+    <!-- Main Content -->
+    <div class="container-fluid mt-4">
+      <!-- Summary Cards -->
+      <div class="row mb-4">
+        <div class="col-md-4 mb-3">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Total Sales</h5>
+              <p class="fs-4">$28,450</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Monthly Sales</h5>
+              <p class="fs-4">$5,230</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Top Product</h5>
+              <p class="fs-5">Green T-shirt</p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="card shadow-sm">
-          <div class="card-body">
-            <h5 class="card-title">Monthly Sales</h5>
-            <p class="fs-4">$5,230</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card shadow-sm">
-          <div class="card-body">
-            <h5 class="card-title">Top Product</h5>
-            <p class="fs-5">Green T-shirt</p>
+
+      <!-- Detailed Sales Table -->
+      <div class="card shadow-sm mb-4">
+        <div class="card-body">
+          <h5 class="card-title mb-3">Detailed Sales Report</h5>
+          <div class="table-responsive">
+            <table class="table table-hover text-center align-middle">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Date</th>
+                  <th>Product</th>
+                  <th>Category</th>
+                  <th>Units Sold</th>
+                  <th>Total</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>2025-07-01</td>
+                  <td>Green T-shirt</td>
+                  <td>Clothing</td>
+                  <td>20</td>
+                  <td>$300.00</td>
+                  <td>
+                    <button class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal">
+                      ✏️ Update
+                    </button>
+                  </td>
+                </tr>
+                <!-- More rows can be added here -->
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Table -->
-    <div class="card shadow-sm mb-4">
-      <div class="card-body">
-        <h5 class="card-title mb-3">Detailed Sales Report</h5>
-        <div class="table-responsive">
-          <table class="table table-hover">
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>Date</th>
-                <th>Product</th>
-                <th>Category</th>
-                <th>Units Sold</th>
-                <th>Total</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>2025-07-01</td>
-                <td>Green T-shirt</td>
-                <td>Clothing</td>
-                <td>20</td>
-                <td>$300.00</td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>2025-07-02</td>
-                <td>Eco Bag</td>
-                <td>Accessories</td>
-                <td>10</td>
-                <td>$150.00</td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>2025-07-03</td>
-                <td>Notebook Set</td>
-                <td>Stationery</td>
-                <td>15</td>
-                <td>$225.00</td>
-              </tr>
-              <tr>
-                <td>4</td>
-                <td>2025-07-04</td>
-                <td>Green T-shirt</td>
-                <td>Clothing</td>
-                <td>25</td>
-                <td>$375.00</td>
-              </tr>
-              <tr>
-                <td>5</td>
-                <td>2025-07-05</td>
-                <td>Stainless Bottle</td>
-                <td>Accessories</td>
-                <td>8</td>
-                <td>$160.00</td>
-              </tr>
-              <!-- Add more rows as needed -->
-            </tbody>
-          </table>
-        </div>
+  <!-- Update Modal -->
+  <div class="modal fade" id="updateModal" tabindex="-1" aria-labelledby="updateModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form>
+          <div class="modal-header">
+            <h5 class="modal-title" id="updateModalLabel">Update Sale Entry</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="mb-3">
+              <label for="updateDate" class="form-label">Date</label>
+              <input type="date" class="form-control" id="updateDate" value="2025-07-01">
+            </div>
+            <div class="mb-3">
+              <label for="updateProduct" class="form-label">Product</label>
+              <input type="text" class="form-control" id="updateProduct" value="Green T-shirt">
+            </div>
+            <div class="mb-3">
+              <label for="updateCategory" class="form-label">Category</label>
+              <select class="form-select" id="updateCategory">
+                <option selected>Clothing</option>
+                <option>Accessories</option>
+                <option>Stationery</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="updateUnits" class="form-label">Units Sold</label>
+              <input type="number" class="form-control" id="updateUnits" value="20" min="0">
+            </div>
+            <div class="mb-3">
+              <label for="updateTotal" class="form-label">Total ($)</label>
+              <input type="text" class="form-control" id="updateTotal" value="300.00">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            <button type="submit" class="btn btn-primary">Save Changes</button>
+          </div>
+        </form>
       </div>
     </div>
-
   </div>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    
 </body>
 </html>
